# dde-globalmenu-service

./: .gitignore  CMakeLists.txt  actions.cpp  dde-globalmenu-service.desktop  dde-globalmenu.service  deb.cmake  main.cpp  menu.cpp  menu.h  menuimporter.cpp  menuproxy.cpp  readme.md  window.cpp  window.h
debian/doc/: changelog
debian/scripts/: postinst
gmenu-dbusmenu-proxy/: actions.cpp  actions.h  debug.h  gdbusmenutypes_p.cpp  gdbusmenutypes_p.h  icons.cpp  icons.h  menu.cpp  menu.h  menuproxy.cpp  menuproxy.h  utils.cpp  utils.h  window.cpp  window.h
